# PoAVoteProject

./: Cargo.toml  README.md  base.env  diesel.toml  poa_vote.db
migrations/2024-06-07-163146_create_tables/: up.sql
migrations/2024-06-09-140820_create_votes_and_vote_validators/: up.sql
migrations/2024-06-09-163139_update/: down.sql  up.sql
src/: README.md  block.rs  genesis_block.rs  key_manager.rs  main.rs  transaction.rs
src/handlers/: handlers.rs
src/models/: mod.rs  schema.rs  user.rs  vote.rs
src/repository/: database.rs
