[package]
name = "PoAVoteProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
actix-web = "4"
rsa = "0.5.0"
base64 = "0.13.0"
awc = "3"
futures = "0.3" 
diesel = { version = "2.0", features = ["sqlite","r2d2"] }
diesel_migrations = "2.0"
dotenv = "0.15"
r2d2 = "0.8"
env_logger = "0.10.0"
reqwest =  { version = "0.11", features = ["blocking", "json"] }